@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                LEOCHARRE-Dir
-version:             1.05
+version:             1.06
 abstract:            ~
 license:             ~
 author:              ~
