@@ -1,3 +1,9 @@
+2008-12-08 16:03  cvs
+
+	* lib/LEOCHARRE/Dir.pm, t/00.t: there was a major bug, lsd() was
+	  returning all file entries, including regular files, instead of
+	  actually just directories.
+
 2008-10-01 17:05  cvs
 
 	* lib/LEOCHARRE/Dir.pm, t/00.t: Made some improvements to error
